Pages für Book+Customer implementiert. Notwendige Tabellen-Programmierung gemacht. Permissionset und -extension erstellt.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "${UICop}",
         "${PerTenantExtensionCop}"
     ],
-    "al.enableCodeAnalysis": false
+    "al.enableCodeAnalysis": true,
+    "editor.snippetSuggestions": "bottom"
 }
